[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/sprites/Personagem_pronto-Sheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/player.gd" type="Script" id=2]
[ext_resource path="res://scripts/weak_spot.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/fire.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/shield.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "+sword+bainha"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("HumanBase2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=2]
resource_name = "-sword+bainha"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("HumanBase2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35, 36, 37, 38, 39 ]
}

[sub_resource type="Animation" id=3]
resource_name = "-sword-bainha"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("HumanBase2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27, 28, 29, 30, 31 ]
}

[sub_resource type="Animation" id=4]
length = 0.35
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("HumanBase2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43, 44, 45, 46 ]
}

[sub_resource type="Animation" id=5]
length = 0.05
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("HumanBase2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 48 ]
}

[sub_resource type="Animation" id=6]
resource_name = "fall-sword"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("HumanBase2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 58, 57, 56 ]
}

[sub_resource type="Animation" id=7]
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("HumanBase2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 48, 49 ]
}

[sub_resource type="Animation" id=8]
resource_name = "jump-sword"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("HumanBase2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 56, 57, 58 ]
}

[sub_resource type="Animation" id=9]
resource_name = "stand_side+sword+bainha"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("HumanBase2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 16 ]
}

[sub_resource type="Animation" id=10]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("HumanBase2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 72 ]
}

[sub_resource type="Animation" id=11]
resource_name = "stand_side-sword-bainha"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("HumanBase2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 27 ]
}

[sub_resource type="Animation" id=12]
resource_name = "take_in_sword"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("HumanBase2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 80, 82, 83, 84, 85, 86, 87 ]
}

[sub_resource type="Animation" id=13]
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("HumanBase2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 88, 89, 90, 91, 92, 93, 94 ]
}

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 2.80843, 9.26945 )

[node name="player" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 2 )

[node name="furious" type="Sprite" parent="."]
visible = false
position = Vector2( 136.956, 104.424 )
texture = ExtResource( 4 )

[node name="HumanBase2" type="Sprite" parent="."]
position = Vector2( 136.862, 104.248 )
texture = ExtResource( 1 )
vframes = 12
hframes = 8
frame = 49

[node name="damage_area" type="Area2D" parent="."]
position = Vector2( 136.656, 104.424 )
collision_mask = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="damage_area"]
visible = false
position = Vector2( 0, -0.0626678 )
polygon = PoolVector2Array( 8.27789, -0.0501328, 7.84778, -13.1562, -5.92134, -13.1562, -6.11082, -0.742638, -5.77383, 11.7395, 8.13625, 11.7732 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 138.895, 105.457 )
current = true
zoom = Vector2( 0.22, 0.22 )
limit_bottom = 150
limit_smoothed = true

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2( 136.656, 104.361 )
polygon = PoolVector2Array( 8.27789, -0.0501328, 7.84778, -13.1562, -5.92134, -13.1562, -6.11082, -0.742638, -5.77383, 11.7395, 8.13625, 11.7732 )

[node name="attack" type="Area2D" parent="."]
collision_mask = 2

[node name="direita" type="CollisionPolygon2D" parent="attack"]
visible = false
polygon = PoolVector2Array( 145.974, 101.276, 150.513, 100.769, 150.594, 105.71, 145.938, 105.197 )
disabled = true

[node name="esquerda" type="CollisionPolygon2D" parent="attack"]
visible = false
scale = Vector2( 0.859445, 1.00246 )
polygon = PoolVector2Array( 145.065, 100.684, 149.965, 101.235, 149.965, 105.227, 145.065, 105.531 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 1.5
anims/+sword+bainha = SubResource( 1 )
anims/-sword+bainha = SubResource( 2 )
anims/-sword-bainha = SubResource( 3 )
anims/attack = SubResource( 4 )
anims/fall = SubResource( 5 )
anims/fall-sword = SubResource( 6 )
anims/jump = SubResource( 7 )
anims/jump-sword = SubResource( 8 )
anims/stand_side+sword+bainha = SubResource( 9 )
anims/stand_side-sword+bainha = SubResource( 10 )
anims/stand_side-sword-bainha = SubResource( 11 )
anims/take_in_sword = SubResource( 12 )
anims/take_out_sword = SubResource( 13 )

[node name="shield2" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="shield" type="Sprite" parent="shield2"]
visible = false
position = Vector2( 136.767, 103.777 )
texture = ExtResource( 5 )

[node name="direita" type="CollisionShape2D" parent="shield2"]
position = Vector2( 145.887, 100.988 )
shape = SubResource( 14 )
disabled = true

[node name="esquerda" type="CollisionShape2D" parent="shield2"]
position = Vector2( 126.229, 100.988 )
shape = SubResource( 14 )
disabled = true
[connection signal="damage" from="damage_area" to="." method="_on_damage_area_damage"]
[connection signal="area_entered" from="attack" to="." method="_on_attack_area_entered"]
